# mkencbox

./: Cargo.toml  readme.md
.github/workflows/: ci.yaml
src/: algorithm.rs  crypto.rs  error.rs  lib.rs  main.rs  mkencbox.rs  mode.rs  os_args.rs  pack.rs  process.rs
src/crypto/: cbcpbkdf2.rs  chacha20.rs
src/mkencbox/: compression.rs  crypto.rs  process.rs
src/pack/: tar.rs  targz.rs
test/: .gitignore  test.sh  text.txt
tests/: enc.rs  enc_cbc.rs  enc_chacha20.rs  test_util.rs
tests/common/: mod.rs
tests/resource/exp_nosalt/: a.txt.enc  b.txt.enc  c.txt.enc
tests/resource/exp_salt/: a.txt.enc  b.txt.enc  c.txt.enc  readme.md
tests/resource/files/: c.txt
