[package]
name = "mkencbox"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
chacha20 = "0.9.1"
clap = { version = "4.5.1", features = ["cargo"] }
hex = "0.4.3"
md5 = "0.7.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.8"
sha256 = "1.5.0"
tar = "0.4.40"
tempfile = "3.12.0"

[dev-dependencies]
walkdir = "2.5.0"
